add in some crystal examples

--- a/shard.yml
+++ b/shard.yml
@@ -20,3 +20,7 @@ dependencies:
   toml:
     github: manastech/crystal-toml
     branch: master
+  db:
+    github: crystal-lang/crystal-db
+  pg:
+    github: will/crystal-pg
